# xct-genesis

./: .dockerignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
configs/: xcity.yaml
configs/roles/: PLAN.md  agro_operator.yaml  citizen.yaml  land_user.yaml  solar_builder.yaml
docs/: README.zh-CN.md
docs/codex/: 00-core.md  01-contract.md  02-actions-and-publish.md  03-codex-loop.md  04-workspace-and-story.md  05-scenario-architecture.md  06-codex-runner-usage.zh-CN.md  README.md
docs/openclaw/: QUICKSTART.md
frontend/: vite.config.ts
frontend/src/: i18n.ts
frontend/src/components/pilot/: PilotPage.tsx  PilotRenderer.tsx  PresentPage.tsx  autoresearch-latest-snapshot.json  format.ts  layout-handle.ts  pilot-data-fixtures.ts  pilot-data-types.ts  pilot-data.ts  pilot-run-data.ts  present-loader.ts  types.ts
frontend/src/router/: index.tsx
frontend/src/styles/: pilot.css
openclaw-plugin/: README.md
scripts/: docker-entrypoint.sh
src/worldseed/: action_dispatch.py  agent_view.py  director_resolver.py  narrator.py  transient.py  world.py
src/worldseed/autoresearch/: __init__.py  agent.py  bootstrap.py  ec2_runner.py  effect_handler.py  paper_renderer.py  paths.py  pending_queue.py  worker.py
src/worldseed/autoresearch/baseline_template/: .gitignore  evaluate.py  pyproject.toml  train_gpt.py
src/worldseed/autoresearch/handlers/: __init__.py  _common.py  propose_hypothesis.py  review_paper.py  (+2 more)
src/worldseed/cli/: __init__.py  _present.py  _probe.py  _workspace.py  codex_runner.py  play.py  run.py
src/worldseed/dsl/: path_resolver.py
src/worldseed/engine/: action_policy.py  dm_resolver.py  event_log.py  inbox.py  rules_engine.py  tick.py  wakeup.py
src/worldseed/models/: config_schema.py
src/worldseed/server/: app.py  models.py  tick_runner.py  websocket.py
tests/e2e/: conftest.py  test_api_stress.py  test_director_api.py  test_gateway.py  test_lifecycle_controls.py  test_lobby_lifecycle.py  test_multi_agent.py
tests/integration/: test_director_checkpoint.py  test_director_disabled.py  test_director_dm_mode.py  test_director_resolve_unhappy.py  test_director_save_restore.py  test_director_urgent.py
tests/stress/: test_generality_composition.py
tests/unit/: test_autoresearch_ec2_runner.py  test_autoresearch_review_policy.py  test_codex_config_schema.py  test_functions.py  test_highlight_edge.py  test_per_agent_config.py  test_preconditions.py  test_wakeup.py
tests/unit/director/: test_checkpoint.py  test_queue.py  test_runtime.py
(+35 files in other folders)
