[project]
name = "worldseed"
version = "0.1.0"
description = "A stateful world engine where AI agents live autonomously"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3",
    "PyYAML>=6.0.2,<7",
    "structlog>=25.1,<26",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28,<1",
    "deepdiff>=7.0,<9",
    "lunar-python>=1.4.8",
    "anthropic>=0.86.0",
]

[project.optional-dependencies]
dm = [
    "litellm>=1.60,<2",
    "instructor>=1.7,<2",
]

[project.scripts]
worldseed = "worldseed.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldseed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Default to xdist parallel — sequential mode triggers cross-test pollution
# from module-level singletons in server routes (tokens, agent_tokens) and
# shared state in e2e/integration fixtures. Each worker is a fresh process,
# so workers can't pollute each other. Override with `pytest -p no:xdist`.
addopts = "-n auto"

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["worldseed"]
mypy_path = ["src"]
exclude = ["src/worldseed/autoresearch/baseline_template/"]

[[tool.mypy.overrides]]
module = "worldseed.autoresearch.baseline_template.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "litellm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "instructor"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deepdiff"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0,<7",
    "pytest-xdist>=3.8.0",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
    "anyio>=4.12.1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "types-PyYAML>=6.0",
    "pre-commit>=4.0,<5",
]
